solc_ossfuzz_seed_corpus/test_sol/test_8f576b15875cdb541045188c7f5cd832a81f2766064acdc623bb0a2c186ab75b_4732e163818fdd9066d3ab4072bea50ccf303bad_sol.sol
==== Source:  ====

==== Source: su0.sol ====
pragma solidity >= 0.0.0;

==== Source: su1.sol ====
library L0 {
  error er0();
  modifier m0(uint16 i0) 
  {
    uint200 l0 = (((uint200(((uint200((uint200(1550252411333696292558007639891638472031759962971509037537500) / uint200(1337976614211653473654324534295250969006753797845190951290244))) * uint200(0)) / uint200(1606938044258990275541962092341162602522202993782792835301375))) - uint200(1606938044258990275541962092341162602522202993782792835301375)) ^ uint200(1606938044258990275541962092341162602522202993782792835301375)) ** uint8(uint8(0)));
    int112 l1 = int112(0);
    _;
  }
  function f0(int128 i0) public  m0(uint16(65535))  returns(bytes11 o0)
  {
    assert(false);
    uint192 l0 = (uint192(0) | uint192(0));
    assembly
    {
      codecopy(add(0x80, mod(i0, 1024)), 20329762293519920467799859165402153034759076921303982393127692096901737380043, mod(extcodesize(i0), 1024))
      switch or(i0, 115792089237316195423570985008687907853269984665640564039457584007913129639935)
      case 76938578762130992904345917381998140182311712788573110382437879318882858107328
      {
        function af0(ai0, ai1, ai2, ai3, ai4, ai5, ai6, ai7, ai8, ai9, ai10, ai11, ai12, ai13, ai14, ai15, ai16, ai17, ai18) -> ao0, ao1, ao2, ao3, ao4, ao5, ao6, ao7, ao8, ao9, ao10, ao11
        {
          return(staticcall(ai16, 115792089237316195423570985008687907853269984665640564039457584007913129639935, add(0x80, mod(i0, 1024)), 27059383611929690623625156870229238325098730335338782558628894163406850138627, 115792089237316195423570985008687907853269984665640564039457584007913129639935, 0), mload(add(0x80, mod(0, 2048))))
        }
      }
      case 0
      {
      }
      case 115792089237316195423570985008687907853269984665640564039457584007913129639935
      {
        o0 := i0
        returndatacopy(add(0x80, mod(0, 1024)), 115792089237316195423570985008687907853269984665640564039457584007913129639935, mod(i0, 1024))
      }
      default
      {
        calldatacopy(add(0x80, mod(i0, 1024)), i0, mod(i0, 1024))
      }
    }
  }
}
pragma solidity >= 0.0.0;
using L0 for int128;
// ----
// DeclarationError 6578: (su1.sol:1369-1371): Cannot access local Solidity variables from inside an inline assembly function.
